--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "vithack2020",
   "version": "1.0.0",
   "description": "",
-  "main": "app.py",
+  "main": "appgit.py",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "python app.py"
   },
   "repository": {
     "type": "git",
